--- a/picclick/src/components/gameCards/style.css
+++ b/picclick/src/components/gameCards/style.css
@@ -1,11 +1,13 @@
 .card {
-    background: #fff;
+    background: rgb(53, 130, 218);
     border-radius: 2px;
     margin: 1rem;
     position: relative;
-    width: 325px;
-    height:325px;
-    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    width: 150px;
+    height:150px;
+    box-shadow: 0 6px 6px rgb(15, 91, 153), 0 6px 6px rgb(204, 191, 11);
+    margin-left: 120px;
+    margin-right: 120px;
   }
   
   .card > .img-container {
@@ -14,6 +16,6 @@
     background:'white';
   }
   .card > .img-container > img {
-    width: 325px;
-    height: 325px;
+    width: 150px;
+    height: 150px;
   }
