switched title and header elements and added additional styling

--- a/picclick/src/components/TitleCard/style.css
+++ b/picclick/src/components/TitleCard/style.css
@@ -3,6 +3,7 @@
     height: 400px;
     background-repeat: no-repeat;
     background-position:right 95% bottom 80%;
+    margin-bottom: 0px;
 }
 
 .title{
