--- a/picclick/src/components/Header/style.css
+++ b/picclick/src/components/Header/style.css
@@ -6,14 +6,14 @@
 
 .navbar{
     width: 100%;
-    height:100px;
+    height:230px;
     background-color: rgb(53, 130, 218);
+    box-shadow: 0 10px 6px rgb(15, 91, 153), 0 10px 10px rgb(204, 191, 11);
+    border: 5px solid rgb(15,91,153);
 }
 
 ul{
     list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
 }
 
 .status{
